# inferbench

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LAUNCH-LINKS.html  LAUNCH-POSTS.md  LAUNCH-devto-article.md  LAUNCH.md  LICENSE  PROJECT_BRIEF.md  README.md  SECURITY-AUDIT.md  SECURITY.md  VERIFY-MATRIX.md  glama.json  package-lock.json  package.json
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md
assets/: README.md
backend/: db.py  main.py  mcp_server.py  pyinstaller.spec  pyproject.toml
backend/api/: benchmark.py  engines.py  hardware.py  history.py  keys.py  models.py  optimize.py  serve.py
backend/core/: benchmark.py  binary_manager.py  compat.py  docker_mgr.py  gguf_reader.py  hardware.py  local_models.py  lookspan.py  model_manager.py  models_catalog.py  native_runtime.py  ollama_manager.py  optimizer.py  secrets.py  serve.py
backend/data/: context_haystack.txt  models.json  prompts.json
backend/engines/: base.py  llamacpp.py  ollama.py  registry.py  sglang.py  stablediffusion.py  tgi.py  vllm.py
backend/scripts/: candidates.json  candidates2.json  enrich_arch.py  make_context_test.py  make_vision_test.py  merge_models.py  verify_models.py
backend/tests/: test_api.py  test_benchmark_api.py  test_benchmark_rigor.py  test_compat.py  test_gguf_reader.py  test_gpu_safety.py  test_image_serve.py  test_keys.py  test_lookspan.py  test_mcp.py  test_multimodal.py  test_multipart.py  test_ollama_manager.py  test_optimizer.py  test_quality.py  test_security.py  test_serve.py  test_speculative.py
docs/: IMAGE.md  (+2 more)
(+60 files in other folders)
